--- a/vtunsite/download.html
+++ b/vtunsite/download.html
@@ -41,6 +41,7 @@
 		      <li>
 			<font face="Verdana" color="#000000">Source</font>
 			<dl>
+			  <a href="http://downloads.sourceforge.net/project/vtun/vtun/3.0.3/vtun-3.0.3.tar.gz">vtun-3.0.3.tar.gz</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.2.tar.gz">vtun-3.0.2.tar.gz</a>
 			</dl>
 		      </li>
@@ -48,18 +49,19 @@
 		      <li>
 			<font face="Verdana" color="#000000">Linux RPM packages</font>
 			<dl>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.2-1.centos5.i386.rpm">Vtun 3.0.2 for CentOS 5</a><br/>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.2-1.centos4.i386.rpm">Vtun 3.0.2 for CentOS 4</a><br/>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.2-1.src.rpm">Vtun 3.0.2 Source RPM</a><br/>
-			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.rh9.i386.rpm">Vtun 3.0.0 for RedHat 9</a><br/>
-			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.centos4.i386.rpm">Tun helper 1.1 for Centos</a><br/>
-			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.src.rpm">Tun helper 1.1 Source RPM</a><br/>
+			  <a href="http://sourceforge.net/projects/vtun/files/vtun/3.0.3/vtun-3.0.3-1.el6.x86_64.rpm">Vtun 3.0.3 for RH/EL 6 (64)</a><br/>
+			  <a href="http://sourceforge.net/projects/vtun/files/vtun/3.0.3/vtun-3.0.3-1.el5.x86_64.rpm">Vtun 3.0.3 for RH/EL 5 (64)</a><br/>
+			  <a href="http://sourceforge.net/projects/vtun/files/vtun/3.0.3/vtun-3.0.3-1.el4.x86_64.rpm">Vtun 3.0.3 for RH/EL 4 (64)</a><br/>
+			  <a href="http://sourceforge.net/projects/vtun/files/vtun/3.0.3/vtun-3.0.3-1.src.rpm">Vtun 3.0.3 Source RPM</a><br/>
 			</dl>
 		      </li>
 		      <br/>
 		      <li>
 			<font face="Verdana" color="#000000">Older packages</font>
 			<dl>
+			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-3.0.0-1.rh9.i386.rpm">Vtun 3.0.0 for RedHat 9</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.centos4.i386.rpm">Tun helper 1.1 for Centos</a><br/>
+			  <a href="http://prdownloads.sourceforge.net/vtun/tun-1.1-8.src.rpm">Tun helper 1.1 Source RPM</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.col31.i386.rpm">Vtun 2.6 for Caldera Open Linux 3.1</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.col311.i386.rpm">Vtun 2.6 for Caldera Open Linux 3.1.1</a><br/>
 			  <a href="http://prdownloads.sourceforge.net/vtun/vtun-2.6-1.rh62.i386.rpm">Vtun 2.6 for RedHat 6.2</a><br/>
@@ -188,7 +190,7 @@ know why!  Send me (bishop) email if you wish to discuss it.</p>
       <img SRC="/cgi-bin/count.cgi?df=vtun_download&ft=1&dd=C&srgb=0;0;0&prgb=0;115;198" alt=""/> 
       <br/><br/>
       <font face="Verdana"> 
-	Copyright (C) 1999-2008 Maxim Krasnyansky<br/>
+	Copyright (C) 1999-2012 Maxim Krasnyansky<br/>
       </font>
       <font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
     </center>
