--- a/vtunsite/index.html
+++ b/vtunsite/index.html
@@ -44,6 +44,7 @@
 			<tr>
 			  <td>
 			    <font face="Verdana" color="#000000">
+			      07.30.2012 Released VTun 3.0.3<br/>
 			      02.08.2008 Released VTun 3.0.2<br/>
 			      06.12.2007 Released VTun 3.0.1<br/>
 			      11.12.2006 Released VTun 3.0.0<br/>
@@ -70,7 +71,7 @@
 		<tr>
 		  <td align="center" valign="top" bgcolor="#446DC4">
 		    <font color="#FFFFFF" face="Verdana">
-		      <b>Documentation</b>
+		      <b>Links</b>
 		    </font>
 		  </td>
 		</tr>
@@ -79,22 +80,16 @@
 		    <font face="Verdana">
 		      <ul>
 			<li>
-			  <a href="faq.html">Frequently Asked Questions(FAQ)</a>
+			  <a href="tun/index.html">Universal TUN/TAP driver</a>
 			</li>
 			<li>
-			  <a href="setup.html">Setup recommendations and Config examples</a>
+			  <a href="http://sourceforge.net/project/?group_id=2947">VTun on SourceForge.net</a>
 			</li>
 			<li>
-			  <a href="vtund.conf">Configuration file</a>
-			</li>
-			<li>
-			  <a href="ChangeLog">Change Log</a>
-			</li>
-			<li><a href="README.LZO">LZO License Exemption</a></li>
-			<li>
-			  Man pages
-			  <dl><a href="vtund.man.html">Daemon</a></dl>
-			  <dl><a href="conf.man.html">Config file</a></dl>
+			  <font face="Verdana" color="#000000">Web site mirrors</font>
+			  <dl>
+			    <a href="http://vtun.info">Vtun.Info (Canada)</a>
+			  </dl>
 			</li>
 		      </ul>
 		    </font>
@@ -146,7 +141,7 @@
 		<tr>
 		  <td align="center" valign="top" bgcolor="#446DC4">
 		    <font color="#FFFFFF" face="Verdana">
-		      <b>Links</b>
+		      <b>Documentation</b>
 		    </font>
 		  </td>
 		</tr>
@@ -155,19 +150,22 @@
 		    <font face="Verdana">
 		      <ul>
 			<li>
-			  <a href="tun/index.html">Universal TUN/TAP driver</a>
+			  <a href="faq.html">Frequently Asked Questions(FAQ)</a>
 			</li>
 			<li>
-			  <a href="http://sourceforge.net/project/?group_id=2947">VTun on SourceForge.net</a>
+			  <a href="setup.html">Setup recommendations and Config examples</a>
 			</li>
 			<li>
-			  <font face="Verdana" color="#000000">Web site mirrors</font>
-			  <dl>
-			    <a href="http://mirror.blackroute.net/vtun">Blackroute.net (USA)</a>
-			  </dl>
-			  <dl>
-			    <a href="http://vtun.info">Vtun.Info (Canada)</a>
-			  </dl>
+			  <a href="vtund.conf">Configuration file</a>
+			</li>
+			<li>
+			  <a href="ChangeLog">Change Log</a>
+			</li>
+			<li><a href="README.LZO">LZO License Exemption</a></li>
+			<li>
+			  Man pages
+			  <dl><a href="vtund.man.html">Daemon</a></dl>
+			  <dl><a href="conf.man.html">Config file</a></dl>
 			</li>
 		      </ul>
 		    </font>
@@ -187,7 +185,7 @@
 	height="31" width="88" /></a>
 	<br/><br/> 
 	<font face="Verdana"> 
-	  Copyright (C) 1999-2008 Maxim Krasnyansky<br/>
+	  Copyright (C) 1999-2012 Maxim Krasnyansky<br/>
 	</font>
 	<font size=-3><a href="http://sourceforge.net/sendmessage.php?touser=10830">corrections?</a></font>   
       </center>
