--- a/vtunsite/team.html
+++ b/vtunsite/team.html
@@ -222,12 +222,12 @@
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
 			<a href=mailto:bishop&#64;platypus.bc.ca> Bishop Clark </a> <br/>
-			Project Management 2003-2005<br/>
+			Project Management 2003-2005,2007-2012<br/>
 			Light Development<br/>
 		      </font></li>
 		      <li><font face="Verdana" color="#000000">
 			<a href=mailto:macfx&#64;tiscali.nl> Mick Young </a> <br/>
-			Project Management 2005-
+			Project Management 2005-2007
 			Helping Bishop focus on rest and development!
 		      </font></li>
 		    </ul>
@@ -269,7 +269,7 @@
       </table>
       <br/><br/>
       <font face="Verdana"> 
-	Copyright (C) 1999-2008 Maxim Krasnyansky
+	Copyright (C) 1999-2012 Maxim Krasnyansky
       </font>
     </center>
   </body>
