--- a/vtunsite/vtund.man.html
+++ b/vtunsite/vtund.man.html
@@ -136,6 +136,17 @@ By default vtund uses /etc/vtund.conf
 
 <DD>
 Do not become daemon.
+
+<DT><I>-m </I>
+<DD>
+Force memory pages to be locked memory-resident to prevent potential
+VM deadlock.  Useful with NFS traffic.  This option has no config file
+equivalent.
+
+<DT><I>-q </I>
+<DD>
+Inhibit the printing of connection messages.
+
 </DL>
 <A NAME="lbAF">&nbsp;</A>
 <H3>Server mode: </H3>
@@ -264,7 +275,7 @@ Maxim Krasnyansky &lt;<A HREF="mailto:max_mk@yahoo.com">max_mk@yahoo.com</A>&gt;
    </table>
    <br><br>
    <font face="Verdana"> 
-      Copyright (C) 1999-2008 Maxim Krasnyansky
+      Copyright (C) 1999-2012 Maxim Krasnyansky
    </font>
 </center>
 </body>
