--- a/vtunsite/index.html
+++ b/vtunsite/index.html
@@ -44,6 +44,7 @@
 			<tr>
 			  <td>
 			    <font face="Verdana" color="#000000">
+			      09.18.2016 Released VTun 3.0.4<br/>
 			      07.30.2012 Released VTun 3.0.3<br/>
 			      02.08.2008 Released VTun 3.0.2<br/>
 			      06.12.2007 Released VTun 3.0.1<br/>
